--- a/_posts/2024-07-01-EBH.markdown
+++ b/_posts/2024-07-01-EBH.markdown
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: EBH dataset (3D Hand Sequence Recovery from Real Blurry Images and Event Stream, ECCV, 2024)
+title: EBH dataset
 date: 2000-01-01 13:32:20 +0300
 description: # Add post description (optional)
 img: # Add image post (optional)
